--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 project = jdcal
-envlist = py26, py27, py34, py35
+envlist = py26,py27,py34,py35,pypy,pypy3
+
 [testenv]
 deps = pytest
 commands = py.test test_jdcal.py
