added code style and doc style conformance validation environments

--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,15 @@
 [tox]
 project = jdcal
-envlist = py26,py27,py34,py35,pypy,pypy3
+envlist = py26,py27,py34,py35,pypy,pypy3,codestyle,docstyle
 
 [testenv]
 deps = pytest
 commands = py.test test_jdcal.py
+
+[testenv:codestyle]
+deps = pycodestyle
+commands = pycodestyle jdcal.py test_jdcal.py
+
+[testenv:docstyle]
+deps = pydocstyle
+commands = pydocstyle jdcal.py test_jdcal.py
