--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ envlist = py26,py27,py34,py35,pypy,pypy3,codestyle,docstyle
 
 [testenv]
 deps = pytest
-commands = py.test test_jdcal.py
+commands = py.test
 
 [testenv:codestyle]
 deps = pycodestyle
