Add Python 3.6, drop EOL 2.6

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
 project = jdcal
-envlist = py26,py27,py34,py35,pypy,pypy3,codestyle,docstyle
+envlist = py27, py34, py35, pypy, pypy3, codestyle, docstyle
 
 [testenv]
 deps = pytest
-commands = py.test
+commands = pytest
 
 [testenv:codestyle]
 deps = pycodestyle
