--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,7 @@ language: python
 cache: pip
 
 python:
-    - 2.6
     - 2.7
-    - 3.3
     - 3.4
     - 3.5
     - 3.6
@@ -15,10 +13,18 @@ python:
 
 matrix:
     include:
-        - python: 3.6
+        # Enable 3.7 without globally enabling sudo and dist: xenial for other build jobs
+        - python: 3.7
+          dist: xenial
+          sudo: true
+        - python: 3.7
           env: STYLE='code'
-        - python: 3.6
+          dist: xenial
+          sudo: true
+        - python: 3.7
           env: STYLE='docs'
+          dist: xenial
+          sudo: true
 
 install:
     - |
