--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 project = jdcal
-envlist = py27, py34, py35, pypy, pypy3, codestyle, docstyle
+envlist = py27, py34, py35, py36, py37, pypy, pypy3, codestyle, docstyle
 
 [testenv]
 deps = pytest
