Install latest setuptools to avoid race condition https://github.com/pypa/setuptools/issues/951\#issuecomment-299653469

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ matrix:
           sudo: true
 
 install:
+    - pip install --upgrade pip setuptools
     - |
       if [[ $STYLE ]]; then
         if [[ $STYLE == 'code' ]]; then
