--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,9 @@ python:
     - 3.4
     - 3.5
     - 3.6
-    - pypy
-    - pypy3
+    - 3.7
+    - pypy2.7-6.0
+    - pypy3.5-6.0
 
 matrix:
     include:
