--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,23 @@
 sudo: false
 
 language: python
+dist: xenial
 cache: pip
 
 python:
-    - 2.6
     - 2.7
-    - 3.3
     - 3.4
     - 3.5
     - 3.6
-    - pypy
-    - pypy3
+    - 3.7
+    - pypy2.7-6.0
+    - pypy3.5-6.0
 
 matrix:
     include:
-        - python: 3.6
+        - python: 3.7
           env: STYLE='code'
-        - python: 3.6
+        - python: 3.7
           env: STYLE='docs'
 
 install:
