Fixed E741 ambiguous variable name 'l' in jdcal.py.
Ignore E722 (bare except) and E501 (line too long) in test_jdcal.py.

--- a/tox.ini
+++ b/tox.ini
@@ -8,7 +8,7 @@ commands = pytest
 
 [testenv:codestyle]
 deps = pycodestyle
-commands = pycodestyle jdcal.py test_jdcal.py
+commands = pycodestyle --ignore=E722,E501 jdcal.py test_jdcal.py
 
 [testenv:docstyle]
 deps = pydocstyle
