Add astropy to testenv.deps in tox.ini.

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,10 @@ project = jdcal
 envlist = py{27,34,35,36,37,38,py,py3}, codestyle, docstyle
 
 [testenv]
-deps = pytest
+deps = 
+    pytest
+    astropy
+
 commands = pytest
 
 [testenv:codestyle]
