Remove astropy from pypy and pypy3
Travis CI: pypy succeeded but pypy3 failed. The latter is understandable 
but former is not! Better to be explicit and remove them.

--- a/tox.ini
+++ b/tox.ini
@@ -9,6 +9,14 @@ deps =
 
 commands = pytest
 
+[testenv:pypy]
+
+deps = pytest
+
+[testenv:pypy3]
+
+deps = pytest
+
 [testenv:codestyle]
 deps = pycodestyle
 commands = pycodestyle --ignore=E722,E501 jdcal.py test_jdcal.py
