Add astropy only for CPython in tox.ini
Travis CI: Previous attempt to remove astropy from pypy and pypy3 didn't work. 
In this commit astropy is only added to CPython.

--- a/tox.ini
+++ b/tox.ini
@@ -3,19 +3,13 @@ project = jdcal
 envlist = py{27,34,35,36,37,38,py,py3}, codestyle, docstyle
 
 [testenv]
+deps = pytest
+commands = pytest
+
+[testenv:py{27,34,35,36,37,38,py,py3}]
 deps = 
     pytest
     astropy
-
-commands = pytest
-
-[testenv:pypy]
-
-deps = pytest
-
-[testenv:pypy3]
-
-deps = pytest
 
 [testenv:codestyle]
 deps = pycodestyle
