Only CPython installs astropy.
Previous commit had pypy and pypy3 included by mistake.

--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ envlist = py{27,34,35,36,37,38,py,py3}, codestyle, docstyle
 deps = pytest
 commands = pytest
 
-[testenv:py{27,34,35,36,37,38,py,py3}]
+[testenv:py{27,34,35,36,37,38}]
 deps = 
     pytest
     astropy
