--- a/.travis.yml
+++ b/.travis.yml
@@ -12,14 +12,26 @@ python:
   - pypy
 
 env:
-  global:
-    - TOXENV=py
+    global:
+      - TOXENV=py
 
 matrix:
   include:
     - env: TOXENV=codestyle
     - env: TOXENV=docstyle
-
+    - python: 3.8
+      env: TOXENV=py38
+    - python: 3.7
+      env: TOXENV=py37
+    - python: 3.6
+      env: TOXENV=py36
+    - python: 3.5
+      env: TOXENV=py35
+    - python: 3.4
+      env: TOXENV=py34
+    - python: 2.7
+      env: TOXENV=py27
+      
 install: pip install tox
 
 script: tox
