--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,26 @@
 [tox]
 project = jdcal
-envlist = py{27,34,35,36,37,38,py,py3}, codestyle, docstyle
+envlist = py{27,34,35,36,37,38,py,py3}, codestyle, docstyle, mypy
 
 [testenv]
 deps = pytest
 commands = pytest
 
+[testenv:py{27,34}]
+deps =
+    typing
+    pytest
+    astropy
+
 [testenv:py{27,34,35,36,37,38}]
 deps = 
     pytest
     astropy
+
+[testenv:pypy]
+deps = 
+    typing
+    pytest
 
 [testenv:codestyle]
 deps = pycodestyle
@@ -18,3 +29,7 @@ commands = pycodestyle --ignore=E722,E501 jdcal.py test_jdcal.py
 [testenv:docstyle]
 deps = pydocstyle
 commands = pydocstyle jdcal.py test_jdcal.py
+
+[testenv:mypy]
+deps = mypy
+commands = mypy --strict jdcal.py
