--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ matrix:
     - python: 3.8
       env: TOXENV=docstyle
     - python: 3.8
+      env: TOXENV=mypy
+    - python: 3.8
       env: TOXENV=py38
     - python: 3.7
       env: TOXENV=py37
@@ -34,6 +36,9 @@ matrix:
     - python: 3.8
       arch: ppc64le
       env: TOXENV=docstyle
+    - python: 3.8
+      arch: ppc64le
+      env: TOXENV=mypy
     - python: 3.8
       arch: ppc64le
       env: TOXENV=py38
