--- a/tox.ini
+++ b/tox.ini
@@ -13,12 +13,12 @@ deps =
 
 [testenv:codestyle]
 deps = pycodestyle
-commands = pycodestyle --ignore=E722,E501 jdcal.py test_jdcal.py
+commands = pycodestyle --ignore=E722,E501 src/jdcal/jdcal.py tests/test_jdcal.py
 
 [testenv:docstyle]
 deps = pydocstyle
-commands = pydocstyle jdcal.py test_jdcal.py
+commands = pydocstyle src/jdcal/jdcal.py 
 
 [testenv:mypy]
 deps = mypy
-commands = mypy --strict jdcal.py
+commands = mypy --strict src/jdcal/jdcal.py
