--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,33 @@
 [bdist_wheel]
 universal = 1
+
+[metadata]
+name = jdcal
+version = attr: jdcal.__version__
+description = Julian dates from proleptic Gregorian and Julian calendars.
+long_description = file: README.rst
+license = BSD
+author = Prasanth Nair
+author_email = prasanthhn@gmail.com
+url = https://github.com/phn/jdcal
+classifiers =
+    Development Status :: 6 - Mature
+    Intended Audience :: Science/Research
+    Operating System :: OS Independent
+    License :: OSI Approved :: BSD License
+    Topic :: Scientific/Engineering :: Astronomy
+    Programming Language :: Python
+    Programming Language :: Python :: 2
+    Programming Language :: Python :: 2.7
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.4
+    Programming Language :: Python :: 3.5
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: Implementation :: CPython
+    Programming Language :: Python :: Implementation :: PyPy
+
+[options]
+py_modules = jdcal
