--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,15 +32,15 @@ jobs:
       fail-fast: false
       matrix:
         python:
-          - 2.7
-          - 3.4
-          - 3.5
-          - 3.6
-          - 3.7
-          - 3.8
-          - 3.9
-          - pypy2
-          - pypy3
+          - "2.7"
+          - "3.5"
+          - "3.6"
+          - "3.7"
+          - "3.8"
+          - "3.9"
+          - "3.10"
+          - "pypy2"
+          - "pypy3"
 
     steps:
       - uses: actions/checkout@master
